--- a/.gitmodules
+++ b/.gitmodules
@@ -36,7 +36,7 @@
 	url = git@github-personal:derekwyatt/vim-scala.git
 [submodule ".vim/bundle/vim-python-pep8-indent"]
 	path = .vim/bundle/vim-python-pep8-indent
-	url = https://github-personal/Vimjas/vim-python-pep8-indent.git
+	url = git@github-personal:Vimjas/vim-python-pep8-indent.git
 [submodule ".vim/bundle/terminus"]
 	path = .vim/bundle/terminus
-	url = https://github-personal/wincent/terminus.git
+	url = git@github-personal:wincent/terminus.git
