--- a/.gitmodules
+++ b/.gitmodules
@@ -6,7 +6,7 @@
 	url = git@github-personal:rking/ag.vim
 [submodule ".vim/bundle/ctrlp.vim"]
 	path = .vim/bundle/ctrlp.vim
-	url = git@github.com:ctrlpvim/ctrlp.vim.git
+	url = git@github-personal:ctrlpvim/ctrlp.vim.git
 [submodule ".vim/bundle/nerdcommenter"]
 	path = .vim/bundle/nerdcommenter
 	url = git@github-personal:scrooloose/nerdcommenter.git
@@ -36,7 +36,7 @@
 	url = git@github-personal:derekwyatt/vim-scala.git
 [submodule ".vim/bundle/vim-python-pep8-indent"]
 	path = .vim/bundle/vim-python-pep8-indent
-	url = https://github.com/Vimjas/vim-python-pep8-indent.git
+	url = https://github-personal/Vimjas/vim-python-pep8-indent.git
 [submodule ".vim/bundle/terminus"]
 	path = .vim/bundle/terminus
-	url = https://github.com/wincent/terminus.git
+	url = https://github-personal/wincent/terminus.git
